2012-01-26  Valek Filippov

		* PUB: Improvements in pub98/2k 'Contents' parsing.
		* PUB: clean-up.

2012-01-25  Valek Filippov

		* PUB: start to parse 'Contents' from pub98/2k files.

2012-01-24  Valek Filippov

		* VSD: cosmetic fix for OLE in stencils.

2012-01-22  Valek Filippov

		* PUB: Some improvements in  representation an parsing of blocks.
		* VSD: Small improvement in Stylesheet for ver5 parsing

2012-01-15  Valek Filippov

		* Escher: temporary changes to look into file from fdo#43193

2012-01-14  Valek Filippov

		* CPT: ported support from cptre.

2012-01-03  Valek Filippov

		* Fixes for search in PUB.
		* Attempt to implement 'compare'.

2012-01-02  Valek Filippov

		* Added second HEX highlight (useful for Quill and CDR).
		* PUB: Quill/FDPC hex highlighting started.

2011-12-19  Valek Filippov

		* Backported 'search list dbl-click' improvement from my other tool.

2011-12-10  Valek Filippov

		* Move some common functions to "utils".
		* CDR: loda-specific search (?rloda#d007), highligh tooltip if 4 bytes match with dict ID.

2011-12-09  Valek Filippov

		* CDR: improved loda and outl parsing

2011-12-07  Valek Filippov

		* CDR: bbox and obbx, initial parsing

2011-11-30  Valek Filippov

		* CDR: fix layer names, loda coords and DISP
		* CDR: start to parse 'arrw' and 'outl'

2011-11-29  Valek Filippov

		* DOC: start to parse *Table

2011-11-28  Valek Filippov

		* DOC: parse FcLcb2k*

2011-11-27  Valek Filippov

		* DOC: parse FcLcb97

2011-11-26  Valek Filippov

		* DOC: start to parse FIBs

2011-11-21  Valek Filippov

		* VSD: fix blocks offset for TextFields in ver6
		* XLS: parse Unicode Lbl names properly ([MS-XLS] is wrong)
		* XLS: start to parse expressions

2011-11-14  Valek Filippov

		* XLS: start to parse Lbl.

2011-11-11  Valek Filippov

		* XLS: add Ptg definitions for future parsing.

2011-11-05  Valek Filippov

		* Little code clean-up.

2011-11-04  Valek Filippov

		* "$esc" was not in Help->Manual.
		* VSD: fix the date.
