@@ -1,3 +1,7 @@
+2012-01-27  Valek Filippov
+
+		* CDW: Initial support for Kompas.
+
 2012-01-26  Valek Filippov
 
 		* PUB: Improvements in pub98/2k 'Contents' parsing.
